2 Local Kubernetes/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: admin
  labels:
    name: admin
spec:
  rules:
  - host: admin.alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: account
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing
  labels:
    name: landing
spec:
  rules:
  - host: landing.alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: landing
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: member
  labels:
    name: member
spec:
  rules:
  - host: member.alinefinancial.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: member
            port: 
              number: 80
